--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
-<html ng-app = 'room'>
+<html>
 
 <head>
     <title>Angular todo list</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
     <script src="https://unpkg.com/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <!-- <script src="https://npmcdn.com/angular@latest/angular.js"></script>
+    <script src="https://npmcdn.com/angular-ui-router@1.0.0-alpha.4/release/angular-ui-router.js"></script> -->
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="hotel.css">
     <script src="hotel.js"></script>
+    <script src="room.js"></script>
 </head>
 
-<body>
+<body ng-app = 'room'>
    
 
-    <div ng-controller='RoomController as roomlist'>
+    <!-- <div ng-controller='RoomController as roomlist'>
     <li ng-repeat='room in roomlist.rooms'>
-    <span>{{room.id}} belongs to {{room.name}}</span>    	
+    <span><a ui-sref={{room.id}}  ui-sref-active="active">belongs to {{room.name}}</a></span>    	
     </li>
     <form class="form-horizontal">
             
             <button class="btn" ng-click='roomlist.addRoom()'><i class="glyphicon glyphicon-plus"></i></button>
         </form>
     	
-    </div>
+    </div> -->
+    <a ui-sref='room'  ui-sref-active="active">belongs to</a>
     <ui-view></ui-view>
 </body>
 </html>
