almost done, need to pass id

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="/css/hotel.css">
     <script src="hotel.js"></script>
     <script src="/controllers/hotelCtrl.js"></script>
+    <script src="/controllers/todoCtrl.js"></script>
 </head>
 
 <body ng-app='room'>
